extends Control

func _on_first_level_button_pressed():
	pass # Replace with function body.


func _on_second_level_button_pressed():
	pass # Replace with function body.


func _on_third_level_button_pressed():
	pass # Replace with function body.


func _on_change_level_select_button_pressed():
	pass # Replace with function body.
